# novac

./: .gitignore  AGENTS.md  AST.md  Cargo.toml  GEMINI.md  LICENSE  README.md  TODO.md  build.zig  build.zig.zon  build_output.txt  dune-project  main  novac.opam  test_enum.nova  test_generics.nova  test_simple_generic.nova  test_stdlib_minimal.nova
.github/workflows/: build-and-test.yml  release.yml
analysis/: Cargo.toml  TODO.md
analysis/src/: lib.rs
assets/: script.js  style.css
codegen/: Cargo.toml  TODO.md
codegen/src/: lib.rs  target_amd64.rs  target_llvm.rs
docs/: spec.md
examples/: basic-functions.nova  c_style_for_loop.nova  codegen-test.nova  complex-types.nova  compound_assign.nova  currying-functions.nova  enum_payload.nova  ffi-example.nova  for_loop_test.nova  if_basic.nova  module-test.nova  open-statements.nova  person.no  person.nova  showcase.nova  showcase.nova.ll  simple_for_loop.nova  spec.no  spec.nova  stdlib-test.nova  tags-and-macros.nova  while_basic.nova
lexer/src/: lib.rs  token.rs
lib/: analysis.ml  ast.ml  cli.ml  codegen.ml  doc_gen.ml  dune  lexer.ml  lexer_test.ml  logger.ml  node.ml  parser.ml  preprocessor.ml  test.ml  test_codegen.ml  test_lexer.ml  test_parser.ml  token.ml  utils.ml
parser/: Cargo.toml
parser/src/: lib.rs  nodes.rs
src/: Lexer.zig  ast.rs  cli.rs  lexer.rs  lib.rs  logging.rs  main.rs  main.zig  parser.rs  root.zig
src/analysis/: mod.rs
src/analyzer/: annotated.rs  context.rs  errors.rs  mod.rs  types.rs
src/codegen/: builder.rs  common.rs  emitter.rs  expressions.rs  mangler.rs  mod.rs  target_amd64_linux.rs  target_amd64_windows.rs  target_arm64_linux.rs  target_arm64_windows.rs  types.rs
src/commands/: build.rs  clean.rs  codegen.rs  common.rs  compile.rs  doc.rs  mod.rs  parse.rs  run.rs  test_compile.rs  test_compile_promote.rs  tokenize.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs  nodes.rs
stdlib/: TODO.md  c.nova  io.nova  math.nova  root.nova  std.nova
stdlib/std/: c.nova  io.nova  math.nova
tests/: .expected.json  anon_functions.nv  basic_functions.nv  if_else_constructs.nv  integration_test.rs  match_expressions.nv  person.nv  simple_main.nv  spec.nova  test_c_style_for_loop.expected.json  test_c_style_for_loop.nova  test_codegen_minimal.expected.json  test_codegen_minimal.nova  test_codegen_simple.expected.json  test_codegen_simple.nova  test_compound_assign.expected.json  test_compound_assign.nova  test_enum_payload.expected.json  test_enum_payload.nova  test_error.expected.json  test_error.nova  test_for_loop.expected.json  test_for_loop.nova  test_generic_advanced.expected.json  test_generic_advanced.nova  test_generic_box.expected.json  test_generic_box.nova  test_generics.expected.json  test_generics.nova  test_macros.nova  test_many_params.expected.json  test_many_params.nova  test_match.expected.json  test_match.nova  test_named_params.expected.json  test_named_params.nova  test_power.expected.json  test_power.nova  test_reflection.expected.json  test_reflection.nova  (+5 more)
