[package]
name = "novac"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [".", "analysis", "codegen", "lexer", "parser"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }

lexer = { path = "lexer" }
parser = { path = "parser" }
analysis = { path = "analysis" }
codegen = { path = "codegen" }
