(rule
 (target spec_test.ml)
 (deps ../examples/spec.nova)
 (action
  (with-stdout-to spec_test.ml
   (progn
    (echo "let content = {s|")
    (run cat ../examples/spec.nova)
    (echo "|s}")))))

(rule
 (target person_test.ml)
 (deps ../examples/person.nova)
 (action
  (with-stdout-to person_test.ml
   (progn
    (echo "let content = {s|")
    (run cat ../examples/person.nova)
    (echo "|s}")))))

(library
 (name novac)
 (inline_tests)
 (preprocess 
   (pps
     ppx_deriving.show
     ppx_expect))
 (libraries easy_logging spectrum))
