(rule
  (target nova_tests.ml)
  (deps (glob_files ../examples/*))
  (action
    (with-stdout-to %{target}
      (bash "for file in ../examples/*; do
               filename=$(basename \"$file\")
               name=$(echo \"${filename%.*}\" | tr '-' '_')
               echo \"let content_$name = {s|\"
               cat \"$file\"
               echo \"|s}\"
             done

             echo -n 'let all = ['
             for file in ../examples/*; do
               filename=$(basename \"$file\")
               name=$(echo \"${filename%.*}\" | tr '-' '_')
               echo -n \"(\\\"$name\\\", content_$name); \"
             done
             echo ']'"))))

(library
 (name novac)
 (inline_tests)
 (preprocess 
   (pps
     ppx_deriving.show
     ppx_expect))
 (libraries cmdliner easy_logging spectrum llvm))
